--- a/src/main/webapp/index.css
+++ b/src/main/webapp/index.css
@@ -18,9 +18,8 @@
   display: block; }
 #home > #presentation {
   width: 80%;
-  min-height: 10em;
   margin: 1em 10%;
-  padding: 1em;
+  padding: 2em;
   border-radius: 0.3em;
   border: 1px solid dimgray; }
 #home > #form-subject {
@@ -31,6 +30,14 @@
   margin-top: 6em;
   list-style: none;
   padding: 0; }
+  #home > #list > #subject-list > .no-subject {
+    cursor: pointer;
+    margin-bottom: 1em;
+    padding: 1em;
+    width: 100%;
+    background-color: white;
+    color: red;
+    border: 1px solid dimgray; }
   #home > #list > #subject-list > .subject-item {
     cursor: pointer;
     margin-bottom: 1em;
@@ -52,50 +59,74 @@
 
 #message > div {
   display: block; }
+#message > .subject-item {
+  cursor: pointer;
+  margin-bottom: 1em;
+  padding: 1em;
+  display: flex;
+  width: 100%;
+  background-color: rgba(240, 240, 240, 0.8);
+  border: 1px solid dimgray; }
+  #message > .subject-item > .title {
+    flex: 1;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden; }
+  #message > .subject-item > .author {
+    max-width: 15em; }
+  #message > .subject-item > .date {
+    width: 6em; }
 #message #answer {
   border: 1px solid #dcdcdc;
   color: dimgray;
   border-radius: 0.3em;
   padding: 1em;
   text-align: right;
-  width: 5em;
-  height: 50em; }
+  width: 7em; }
 #message > #form-message > form > textarea {
   max-width: 70%;
-  margin-left: 15%;
+  margin: 0;
   min-width: 70%;
   min-height: 15em;
   max-height: 15em; }
-#message > #list > #message-list {
+#message #message-list {
   margin-top: 6em;
   list-style: none;
   padding: 0; }
-  #message > #list > #message-list > .message-item {
+  #message #message-list .message-item {
     cursor: pointer;
     margin-bottom: 1em;
-    padding: 1em;
     width: 100%;
     background-color: white;
-    border: 1px solid dimgray; }
-    #message > #list > #message-list > .message-item > div {
-      display: flex; }
-      #message > #list > #message-list > .message-item > div > .title {
-        flex: 1;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden; }
-      #message > #list > #message-list > .message-item > div > .author {
-        max-width: 15em; }
-      #message > #list > #message-list > .message-item > div > .date {
-        width: 6em; }
+    border: 1px solid rgba(240, 240, 240, 0.8); }
+    #message #message-list .message-item > div {
+      border: 1px solid dimgray;
+      border-radius: 0.5em;
+      margin-bottom: 1em; }
+      #message #message-list .message-item > div > .msg-header {
+        display: flex;
+        padding: 1em;
+        background-color: lightskyblue; }
+        #message #message-list .message-item > div > .msg-header > .title {
+          flex: 1;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          overflow: hidden; }
+        #message #message-list .message-item > div > .msg-header > .author {
+          max-width: 15em; }
+        #message #message-list .message-item > div > .msg-header > .date {
+          width: 6em; }
+      #message #message-list .message-item > div > .msg-body {
+        padding: 1em; }
 
 body {
   background-color: #dcdcdc;
-  height: 100%; }
+  height: 100%;
+  min-width: 460px; }
   body #content {
     float: left;
     background-color: white;
-    height: 100vh;
+    min-height: 100vh;
     width: 70%;
     margin-top: 0;
     margin-left: 15%;
@@ -107,10 +138,10 @@ body {
       margin: 2em; }
     body #content h2 {
       color: dimgray;
-      font-size: 2em;
+      font-size: 2em !important;
       font-weight: bold;
       margin: 2em;
-      text-align: center; }
+      text-align: center !important; }
     body #content h2 {
       color: dimgray;
       font-size: 1.3em;
